<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="32dp"
                android:orientation="vertical">

  <TextView
    android:id="@+id/setup_title_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="26dp"
    android:layout_marginTop="26dp"
    android:gravity="center"
    android:text="@string/setup_info"
    android:textColor="?attr/colorPrimary"
    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"/>

  <TextView
    android:id="@+id/select_method_tip_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/setup_title_text"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    android:text="@string/setup_setup_method"/>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/setup_next"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cornerRadius="16dp"
    android:text="@string/setup_next"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/setup_next"
    android:layout_below="@id/select_method_tip_text"
    android:orientation="vertical">

    <RadioGroup
      android:id="@+id/setup_method_group"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:checkedButton="@id/setup_method_online">

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/setup_method_online"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_online"/>

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/setup_method_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_local"/>

      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/setup_method_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_backup"/>

    </RadioGroup>

    <TextView
      android:id="@+id/setup_url_tip_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      android:text="@string/setup_source_parameter"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/setup_source_parameter"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:clickable="false"
          android:hint="@string/setup_hint_online"
          android:text="@string/default_source_url"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_source_parameter_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        style="@style/Widget.Material3.Button.TonalButton"
        android:text="@string/setup_dots"/>

    </LinearLayout>

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="8dp">

      <TextView
        android:id="@+id/setup_log_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"/>
    </ScrollView>

  </LinearLayout>

</RelativeLayout>